Fixed index page thumbnail width. Was set slightly too small so the images would overrun slightly into their margins and look rubbish

--- a/themes/ICTheme/static/css/main.css
+++ b/themes/ICTheme/static/css/main.css
@@ -318,12 +318,15 @@ pre {
 .index-thumbl {
   float: left;
   margin-right: 10px;
-  max-width: 220px; }
+  max-width: 225px; }
 
 .index-thumbr {
   float: right;
   margin-left: 10px;
-  max-width: 220px; }
+  max-width: 225px; }
+
+.index-thumbl img, .index-thumbr img {
+  max-width: 225px; }
 
 .content-footer {
   width: 100%;
